--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./style.css">
+  <title>Grid</title>
+</head>
+
+<body>
+  <main>
+    <h1>We deliver beautiful and reliable designs you need </h1>
+    <p class="main-p">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus imperdiet sed id elementum.
+      Quam vel aliquam sit vulputate. Faucibus nec gravida ipsum pulvinar vel.
+    </p>
+    <button>Get started</button>
+    <div class="grid-container">
+      <div class="grid-item grid-item-1">
+        <p>Lorem ipsum dolor sit amet consectetur.</p>
+      </div>
+      <div class="grid-item grid-item-2">
+        <p>Lorem ipsum dolor sit amet consectetur.</p>
+      </div>
+      <div class="grid-item grid-item-3">
+        <h2>Title 2</h2>
+      </div>
+      <div class="grid-item grid-item-4">
+        <h2>Title 1</h2>
+      </div>
+      <div class="grid-item grid-item-5">
+        <p>Lorem ipsum dolor sit amet consectetur.</p>
+      </div>
+      <div class="grid-item grid-item-6">
+        <p>Lorem ipsum dolor sit amet consectetur.</p>
+      </div>
+    </div>
+  </main>
+</body>
+
 </html>
